fix: horizontal scrollbar in mobile devices

--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
